@@ -2,7 +2,7 @@
  * errors that arise from ldap use
  * Most errors become their own exception
  * See http://www.python-ldap.org/ for details.
- * $Id: errors.c,v 1.29 2017/04/25 12:45:27 stroeder Exp $ */
+ * $Id: errors.c,v 1.30 2017/04/25 13:40:52 stroeder Exp $ */
 
 #include "common.h"
 #include "errors.h"
@@ -58,6 +58,7 @@ LDAPerror( LDAP *l, char *msg )
     PyObject *errobj;
     PyObject *info;
     PyObject *str;
+    PyObject *pyerrno;
 
     /* at first save errno for later use before it gets overwritten by another call */
     myerrno = errno;
@@ -85,6 +86,13 @@ LDAPerror( LDAP *l, char *msg )
       PyDict_SetItemString( info, "desc", str );
     Py_XDECREF(str);
 
+    if (myerrno != 0) {
+        pyerrno = PyInt_FromLong(myerrno);
+        if (pyerrno)
+            PyDict_SetItemString( info, "errno", pyerrno );
+        Py_XDECREF(pyerrno);
+    }
+
     if (ldap_get_option(l, LDAP_OPT_MATCHED_DN, &matched) >= 0
       && matched != NULL) {
         if (*matched != '\0') {
@@ -106,11 +114,6 @@ LDAPerror( LDAP *l, char *msg )
             str = PyString_FromString(error);
             if (str)
                 PyDict_SetItemString( info, "info", str );
-            Py_XDECREF(str);
-        } else if (myerrno != 0) {
-            str = PyString_FromString(strerror(myerrno));
-            if(str)
-                PyDict_SetItemString( info, "info", str);
             Py_XDECREF(str);
         }
         ldap_memfree(error);
